fix map marker, text content overflow-x

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -80,6 +80,8 @@ form {
 }
 
 .box {
+  overflow-x: auto;
+
   &:where(:not(:first-child)) {
     margin-top: 1rem;
   }
@@ -96,6 +98,7 @@ form {
   &_content {
     font-size: var(--fs-500);
     font-weight: var(--fw-semi-bold);
+    width: fit-content;
   }
 }
 
