--- a/scss/_media-query.scss
+++ b/scss/_media-query.scss
@@ -29,7 +29,7 @@
     }
 
     &_content {
-      max-width: 10ch;
+      //max-width: 10ch;
     }
   }
 }
